# MLprojects

./: pyproject.toml  setup.py
notebook/: model_training.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py
src/components/: data_ingestion.py
